
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
  Url     : https://github.com/shtrih-m/javapos_shtrih

********************************************************************************

  September 22 2017
  deviceServiceVersion = 1013466
	
  [+] Added directIO command SMFPTR_DIO_FS_READ_STATUS = 0x52;
  [+] Added directIO command SMFPTR_DIO_FS_FIND_DOCUMENT = 0x53;
    
********************************************************************************
  September 21 2017
  deviceServiceVersion = 1013465
	
  [+] Added USB device support to Android version
    
********************************************************************************

  September 14 2017
  deviceServiceVersion = 1013464
	
  [*] Fixed generated bar code centering logic
  [-] FSPrintTags: do not print 1084, 1085, 1086, 1203 tags
  [+] Added FSDocumentInfo to make compatibility breakage of fsFindDocument less impactful
  [+] Added directIO commands SMFPTR_DIO_FS_READ_DAY_OPEN, SMFPTR_DIO_FS_READ_DAY_CLOSE and 
      SMFPTR_DIO_FS_READ_RECEIPT 
  [+] Added device serial number caching
  [+] Added new parameters for SMFPTR_DIO_READ_FS_PARAMS
 BREAKING CHANGES:
  [!] FSDocumentInfo: changed getDocumentNumber return value from int to long
  [!] FSDocumentInfo: getDocumentType changed return value from FSDocType to int
  
********************************************************************************

  September 05 2017
  deviceServiceVersion = 1013463
	
  [+] Added ability to print FSTags description when they passed with current font
  
********************************************************************************

  September 04 2017
  deviceServiceVersion = 1013462
	
  [*] Errors suppressed when paper ended after check closed
  [+] Added print continuation DIO-command and method
  [+] Added method fsReadDocumentTLV to allow document TLV reading
  