@@ -7,6 +7,11 @@
 
 ********************************************************************************
 
+  October 03 2017
+  deviceServiceVersion = 1013467
+	
+  [*] Fixed SMFPTR_DIO_PRINT_CORRECTION2 added result code check
+
   September 22 2017
   deviceServiceVersion = 1013466
 	
